// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CStack with element as nav 1`] = `
<DocumentFragment>
  <nav
    class="css-j7qwjs css-0"
    data-chakra-component="CStack"
    data-testid="stack"
  >
    <div
      class="css-dtyjrz"
      data-chakra-component="CBox"
      data-testid="stack-child-1"
    >
      <h2
        class="css-aku8fb"
        data-chakra-component="CHeading"
      >
        Plan Money
      </h2>
       
      <p
        class="css-18iq2bq"
        data-chakra-component="CText"
      >
        The future can be even brighter but a goal without a plan is just a wish
      </p>
    </div>
    <div
      class="css-1ipbp6k"
      data-chakra-component="CBox"
      data-testid="stack-child-2"
    >
      <h2
        class="css-aku8fb"
        data-chakra-component="CHeading"
      >
        Save Money
      </h2>
       
      <p
        class="css-18iq2bq"
        data-chakra-component="CText"
      >
        You deserve good things. With a whooping 10-15% interest rate per annum, grow your savings on your own terms with our completely automated process
      </p>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`should render CStack with element as section 1`] = `
<DocumentFragment>
  <section
    class="css-j7qwjs css-0"
    data-chakra-component="CStack"
    data-testid="stack"
  >
    <div
      class="css-dtyjrz"
      data-chakra-component="CBox"
      data-testid="stack-child-1"
    >
      <h2
        class="css-aku8fb"
        data-chakra-component="CHeading"
      >
        Plan Money
      </h2>
       
      <p
        class="css-18iq2bq"
        data-chakra-component="CText"
      >
        The future can be even brighter but a goal without a plan is just a wish
      </p>
    </div>
    <div
      class="css-1ipbp6k"
      data-chakra-component="CBox"
      data-testid="stack-child-2"
    >
      <h2
        class="css-aku8fb"
        data-chakra-component="CHeading"
      >
        Save Money
      </h2>
       
      <p
        class="css-18iq2bq"
        data-chakra-component="CText"
      >
        You deserve good things. With a whooping 10-15% interest rate per annum, grow your savings on your own terms with our completely automated process
      </p>
    </div>
  </section>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <div
    class="css-j7qwjs css-0"
    data-chakra-component="CStack"
    data-testid="stack"
  >
    <div
      class="css-dtyjrz"
      data-chakra-component="CBox"
      data-testid="stack-child-1"
    >
      <h2
        class="css-aku8fb"
        data-chakra-component="CHeading"
      >
        Plan Money
      </h2>
       
      <p
        class="css-18iq2bq"
        data-chakra-component="CText"
      >
        The future can be even brighter but a goal without a plan is just a wish
      </p>
    </div>
    <div
      class="css-1ipbp6k"
      data-chakra-component="CBox"
      data-testid="stack-child-2"
    >
      <h2
        class="css-aku8fb"
        data-chakra-component="CHeading"
      >
        Save Money
      </h2>
       
      <p
        class="css-18iq2bq"
        data-chakra-component="CText"
      >
        You deserve good things. With a whooping 10-15% interest rate per annum, grow your savings on your own terms with our completely automated process
      </p>
    </div>
  </div>
</DocumentFragment>
`;
